# web-scraper-rust

./: .gitignore  Cargo.toml  README.md
src/: error.rs  fetcher.rs  main.rs  models.rs  output.rs  parser.rs  scraper.rs
